//protocol=1609;
option java_package = "com.chuangyou.common.protobuf.pb.soul";
option java_outer_classname = "MakeSoulRespProto";

import "soul/SoulMakeMsg.proto";

//材料制作
message MakeSoulRespMsg{
	required int32 op = 1;//操作 1：QTE  2:接受任务(开始制作)  3：制作完成
	optional SoulMakeMsg soulMake = 2;
	optional int32 proficiency = 3;//同步熟练度
}